图表组件可以配置了，但是好像不好用

--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
         "@antv/x6-plugin-snapline": "^2.1.7",
         "@antv/x6-plugin-transform": "^2.1.8",
         "@ctrl/ngx-codemirror": "^6.1.0",
+        "@god-jason/smart": "^1.0.3",
         "camelcase": "^7.0.1",
         "codemirror": "^5.65.13",
         "dayjs": "^1.11.10",
         "echarts": "^5.5.0",
-        "iot-master-smart": "^0.1.8",
         "lodash-es": "^4.17.21",
         "ng-zorro-antd": "^17.4.1",
         "ngx-echarts": "^17.1.0",
